removed test nfts, opensea btns, imageurl, spacing fix

--- a/assets/css/core.scss
+++ b/assets/css/core.scss
@@ -863,8 +863,8 @@ body {
                     width: 27vw;
                     ._window-content {
                         width: 25vw;
-                        max-height: 60vh;
-                        min-height: 60vh;
+                        max-height: 50vh;
+                        min-height: 50vh;
                     }
                 }
             }
